--- a/config.env.example
+++ b/config.env.example
@@ -1,3 +1,4 @@
 SESSION_ID="levanter_sessionid"
 VPS="true"
 AUTO_UPDATE="true"
+MONGODB_URL=mongodb+srv://tan:tan@cluster0.mf0nmls.mongodb.net/?retryWrites=true&w=majority
